RESOLVED FIXED307190
REGRESSION (306126@main): Illegal (cyclical) AVKit module dependency introduced
https://bugs.webkit.org/show_bug.cgi?id=307190
Summary REGRESSION (306126@main): Illegal (cyclical) AVKit module dependency introduced
Tim Horton
Reported 2026-02-06 12:18:34 PST
REGRESSION (306126@main): Illegal (cyclical) AVKit module dependency introduced
Attachments
Tim Horton
Comment 1 2026-02-06 12:18:35 PST
Tim Horton
Comment 2 2026-02-06 12:22:18 PST
EWS
Comment 3 2026-02-06 14:58:15 PST
Committed 306976@main (53b64408e47b): <https://commits.webkit.org/306976@main> Reviewed commits have been landed. Closing PR #58070 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.