REGRESSION (306126@main): Illegal (cyclical) AVKit module dependency introduced https://bugs.webkit.org/show_bug.cgi?id=307190 rdar://169021953

Reviewed by Richard Robinson.

* Source/WebCore/PAL/pal/spi/cocoa/AVKitSPI.h:
All imports of AVKit must be cut off in modulesland, because AVKit indirectly depends on us.
We missed one amongst this file's very complex weave of conditional compilation. Fix it.

Canonical link: https://commits.webkit.org/306976@main